crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_valid_literal_to_own.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_valid_literal_to_own

struct Box { value: Int }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit

fn consume_box(v0: ~Box) -> Box =
  let v1: Int = project v0.0
  let v2: Box = construct Box(v1)
  v2

fn test_ctor() -> Box =
  let v3: ~Box = construct Box(1)
  let v4: Box = call consume_box(v3)
  v4
