crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_valid_match_arms.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_valid_match_arms

type Color = Red#0 | Green#1 | Blue#2
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit

fn consume(v0: ~Option[Int]) -> Option[Int] =
  switch v0 {
    0 (v1: Int) ->
      let v2: Option[Int] = construct Option::Some#0(v1)
      v2
    1 ->
      let v3: Option[Int] = construct Option::None#1()
      v3
  }

fn test(v4: Color) -> Option[Int] =
  let_join v10(v8: ~Option[Int]) =
    let v9: Option[Int] = call consume(v8)
    v9
  in
  switch v4 {
    0 ->
      let v5: ~Option[Int] = construct Option::Some#0(1)
      jump v10(v5)
    1 ->
      let v6: ~Option[Int] = construct Option::Some#0(2)
      jump v10(v6)
    2 ->
      let v7: ~Option[Int] = construct Option::Some#0(3)
      jump v10(v7)
  }
