crates/ir/tests/ir/snapshots/main__ir__lower__ownership__peek_stdlib_match.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__peek_stdlib_match

type Choice = A#0 | B#1
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare peek: (e) -> e

fn classify(v0: String) -> Choice =
  let v1: ~Choice = construct Choice::A#0()
  v1

fn test(v2: ~String) -> String =
  let_join v6(v5: Int) =
    v2
  in
  let v3: String = call peek(v2)
  let v4: Choice = call classify(v3)
  switch v4 {
    0 ->
      jump v6(0)
    1 ->
      jump v6(0)
  }
